# gym-bot

./: .env.example  .gitignore  README.md  application_config.yaml  bot.py  config-env.yaml  config.py  docker-compose.yml  main.py  metris.md  pyproject.toml  requirements.txt  test.py  training_config.yaml  training_config_default.yaml
bot/: handlers.py  keyboards.py  messages.py  reporting_handlers.py  utils.py
config/: trainings.yaml
deploy/: .gitignore  inventory.ini  playbook.yml  vars.yml  vault.yml.example
deploy/templates/: env.j2  gym-bot.service.j2  mongo_env.j2
models/: domain.py  enums.py
old2/: main.py
old2/src/: config.py
scripts/: config2mongo.py  download_trainings.py  json2mongo.py  mongo2json.py  upload_trainings.py
services/: exercise_reporting_service.py  mongo_service.py  reporting_service.py  training_config_service.py
src/: config.py
src/gym_bot/: __main__.py  settings.py
src/models/: domain.py  state.py
src/services/: flow_service.py  input_parser.py  mongo_service.py
tests/bot/: test_callbacks.py  test_state.py
tests/config/: test_models.py  test_service.py
tests/domain/: test_metrics.py  test_models.py
trainings_backup/: 2025-10-14_68f029be9e13ea7a414692e6.json  2025-10-15_68f021bdd0ee9bb9816b141e.json  2025-10-16_68f0a162c18a87755f2cefce.json  2025-10-17_68f222a0173d3fd51048c23c.json  2025-10-18_68f53c46308d3b25a3f8e680.json  2025-10-19_68f53cba308d3b25a3f8e681.json  2025-10-21_68f75e033bd67897d7774f9a.json  2025-10-23_68f9e4ff3bd67897d7774f9b.json  2025-10-25_68fd39af7e17cb4de2970bdf.json
(+25 files in other folders)
