[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-bot"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.5",
    "motor>=3.6",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "cachetools>=6.0",
    "matplotlib>=3.10",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "python-dotenv>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
